# tauri-multiplayer-game

./: .gitignore  README.md  package.json  vite.config.ts
.github/workflows/: build-android.yml
src/: main.tsx  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: chat.rs  game.rs  gossip.rs  ipc.rs  lib.rs  main.rs  state.rs  utils.rs
src-tauri/src/chat/: channel.rs  event.rs  message.rs  peers.rs  ticket.rs
src-tauri/src/game/: board.rs
src-tauri/src/gossip/: channel.rs  doc.rs  ephemeral.rs  event.rs  message.rs  peers.rs  ticket.rs  types.rs
src-tauri/src/gossip/doc/: accessors.rs  chat.rs  peers.rs
src-tauri/src/gossip/ephemeral/: sender.rs
src/components/Layout/: footer.tsx  index.tsx  loader.tsx
src/components/elements/: eventLog.tsx  lobbyForm.tsx  messages.tsx  peerList.tsx  ticket.tsx  topbar.tsx
src/pages/: Chat.tsx  Lobby.tsx  Splash.tsx  index.ts
src/services/: ipc.ts  log.ts  notifications.ts
src/styles/: global.css
src/types/: events.ts  index.ts
src/utils/: index.ts
